--- a/testESP32.ino.bak.9
+++ b/testESP32.ino.bak.9
@@ -1,38 +1,26 @@
-#include <time.h>
-#include <sys/time.h>
-
-#include "SbrBase.h"
+#include "SbrXXX.h"
+#include "SbrYYY.h"
+#include "SbrZZZ.h"
 #include "SbrMpu.h"
 #include "SbrMotor.h"
 #include "SbrControl.h"
 #include "SbrPid.h"
 #include "SbrConfig.h"
 
+SbrXXX *sbrXXX = SbrXXX::getSingleTon("SBR - XXX");
+SbrYYY *sbrYYY = SbrYYY::getSingleTon("SBR - YYY");
+SbrZZZ *sbrZZZ = SbrZZZ::getSingleTon("SBR - ZZZ");
 SbrMpu *sbrMpu = SbrMpu::getSingleTon("SBR - MPU");
 SbrMotor *sbrMotor = SbrMotor::getSingleTon("SBR - Motor");
 SbrControl *sbrControl = SbrControl::getSingleTon("SBR - Control");
 SbrPid *sbrPid = SbrPid::getSingleTon("SBR - PID");
 SbrConfig *sbrConfig = SbrConfig::getSingleTon("SBR - Config");
 
-#ifdef __cplusplus
-extern "C" {
-#endif
-uint8_t temprature_sens_read();
-#ifdef __cplusplus
-}
-#endif
-
-uint8_t temp_farenheit;
-float temp_celsius;
-char strftime_buf[64];
-time_t now = 0;
-struct tm timeinfo;
-char buf[256];
-
 void setup()
 {
   Serial.begin(115200);
-  tzset();
+
+  SbrZZZ::sbrXXX = sbrXXX;
 
   SbrPid::sbrMpu = sbrMpu;
   SbrPid::sbrMotor = sbrMotor;
@@ -40,27 +28,16 @@ void setup()
   SbrConfig::sbrMotor = sbrMotor;
   SbrConfig::sbrPid = sbrPid;
 
-  xTaskCreate(SbrMpu::startUp, sbrMpu->name.c_str(), 10000, sbrMpu, 1, &sbrMpu->task);
-  xTaskCreate(SbrMotor::startUp, sbrMotor->name.c_str(), 10000, sbrMotor, 1, &sbrMotor->task);
-  xTaskCreate(SbrControl::startUp, sbrControl->name.c_str(), 10000, sbrControl, 2, &sbrControl->task);
-  xTaskCreate(SbrPid::startUp, sbrPid->name.c_str(), 10000, sbrPid, 2, &sbrPid->task);
-  xTaskCreate(SbrConfig::startUp, sbrConfig->name.c_str(), 10000, sbrConfig, 1, &sbrConfig->task);
+  xTaskCreate(SbrXXX::startUp, sbrXXX->name.c_str(), 10000, sbrXXX, 1, &sbrXXX->task);
+  //xTaskCreate(SbrYYY::startUp, sbrYYY->name.c_str(), 10000, sbrYYY, 1, &sbrYYY->task);
+  xTaskCreate(SbrZZZ::startUp, sbrZZZ->name.c_str(), 10000, sbrZZZ, 1, &sbrZZZ->task);
+  //xTaskCreate(SbrMpu::startUp, sbrMpu->name.c_str(), 10000, sbrMpu, 1, &sbrMpu->task);
+  //xTaskCreate(SbrMotor::startUp, sbrMotor->name.c_str(), 10000, sbrMotor, 1, &sbrMotor->task);
+  //xTaskCreate(SbrControl::startUp, sbrControl->name.c_str(), 10000, sbrControl, 2, &sbrControl->task);
+  //xTaskCreate(SbrPid::startUp, sbrPid->name.c_str(), 10000, sbrPid, 2, &sbrPid->task);
+  xTaskCreate(SbrConfig::startUp, sbrConfig->name.c_str(), 10000, sbrConfig, 2, &sbrConfig->task);
 }
 
 void loop()
 {
-  localtime_r(&now, &timeinfo);
-  strftime(strftime_buf, sizeof(strftime_buf), "%c", &timeinfo);
-  sprintf(buf, "scan start %02d:%02d:%02d ", timeinfo.tm_hour, timeinfo.tm_min, timeinfo.tm_sec);
-  Serial.print(buf);
-
-  temp_farenheit = temprature_sens_read();
-  temp_celsius = (temp_farenheit - 32) / 1.8;
-  Serial.print("Temp onBoard ");
-  Serial.print(temp_farenheit);
-  Serial.print("°F ");
-  Serial.print(temp_celsius);
-  Serial.println("°C");
-  delay(60000);
-  now++;
 }
